# git-me-the-url

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
gitmetheurl/: __init__.py  base.py  cmd.py  plugin_loader.py
gitmetheurl/translators/: __init__.py  bitbucket.py  github.py  gitlab.py  translator.py
src/gitmetheurl/: __about__.py  __init__.py  base.py  cmd.py  entry_points.py
test/: pylint.rc  run.sh
